<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hackerspace Inventory</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_inventory">Hackerspace Inventory</string>
    <string name="scan_qr">Scan Code</string>
    <string name="item_id">Item ID</string>
    <string name="wiki_password">Wiki Password</string>
    <string name="take_picture">Take Picture</string>
    <string name="image_to_upload">Image To Upload</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description (wikitext allowed)</string>
    <string name="submit">Submit</string>
    <string name="wiki_username">Wiki Username</string>
    <string name="invalid_base_url">Base URL invalid! Posting probably won\'t work :(</string>
    <string name="invalid_url">URL was invalid :(</string>
    <string name="page_created">Wiki Page Created</string>
    <string name="protocol_error">HTTP protocol error :(</string>
    <string name="io_error">IO Error :(</string>
    <string name="login_failed">Login Failed!</string>
    <string name="page_exists">Wiki page already exists!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_atxhackerspace_account_authenticator">ATXHackerspaceAccountAuthenticator</string>
    <string name="getting_wiki_page">Hang On A Moment......</string>

</resources>